2003-07-23  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Apple-ImageWriter.xml, printer/Apple-ImageWriter_II.xml,
	  printer/Apple-ImageWriter_LQ.xml, driver/iwlo.xml,
	  driver/iwhi.xml, driver/iwlq.xml, opt/82.xml: Fixed entries for
	  Apple ImageWriters. Added resolution option to ImageWriter LQ,
	  added 120x72 dpi to all models.

2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Updated the text to correspond to
	  Foomatic 3.x.

	* driver/ppd.xml, opt/ppd-postfix.xml, opt/ppd-prefix.xml: Removed
	  "ppd" driver. As "foomatic-rip" supports manufacturer-supplied
	  PostScript PPDs directly, this driver is obsolete.
	
	* printer/HP-DeskJet_870C.xml: Fixed URL for the printer.

	* printer/HP-LaserJet_4050.xml: Fixed URL of manufacturer-supplied
	  PPD.

	* printer/HP-Color_LaserJet_5500.xml: Added URL of
	  manufacturer-supplied PPD.

2003-07-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/gdi-RET.xml: Forced "RET" option of "gdi" driver to be
	  always off, turning it on gives messy printouts and blocks the
	  printer (at least Samsung ML-4500).

	* opt/gdi-PageTimeout.xml, opt/gdi-PowerSaveTime.xml: Made these
	  options enumerated choice options with only a few values, one
	  does not need to set these values with per-second or per-minute
	  accuracy.
	
2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_4050.xml: Cleaned up text, added URL of
	  manufacturer-supplied PPD.

2003-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/gdi-Altitude.xml, opt/gdi-JamRecovery.xml,
	  opt/gdi-Reprint.xml opt/gdi-AllowReprint.xml: Made option
	  descriptions for the "gdi" driver more clear.

	* driver/gdi.xml: Additional text.

2003-07-17  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gdi.xml, opt/2.xml, gdi-Altitude.xml, opt/gdi-Copies.xml,
	  opt/gdi-Density.xml, opt/gdi-Economode.xml,
	  opt/gdi-JamRecovery.xml, opt/gdi-Manualfeed.xml,
	  opt/gdi-MediaType.xml, opt/gdi-PageSizeJCL.xml,