@@ -1,0 +1,57 @@
+<printer id="printer/HP-Business_Inkjet_1100">
+  <make>HP</make>
+  <model>HP Business Inkjet 1100</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Color(CMY), Black</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.hp.com/itrc_pdi/products/bij1100cxi_overview.html</url>
+  <lang>
+    <pcl level="3e"/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+    <parallel>
+      <commandset>MLC,PCL,PML</commandset>
+      <description>Hewlett-Packard Business Inkjet 1100</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>hp business inkjet 1100</model>
+    </parallel>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--affiliate keys; modify and face my wrath!-->
+  <buyit>cfs:110704,buy:10261808,cfs:110957amz:B00004XREO</buyit><!--no "contrib_url"-->
+  <comments>
+    <en>
+    This printer is equipped with a duplex unit, which is not
+    supported by GIMP-Print, but by HP&apos;s &quot;hpijs&quot;,
+    &quot;cdj970&quot; or &quot;pcl3&quot;.&lt;p&gt;
+
+    Best output quality reachable with the &quot;hpijs&quot;
+    driver, especially the 1200-dpi high resolution mode gives
+    excellent photo quality.&lt;p&gt;
+    
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and does appropriate dithering and
+    colour adjustment internally, controlled by the hardware. So even
+    when GhostScript with the &quot;hpijs&quot; driver only renders
+    the image with 300 or 600 dpi, the 2400x1200 dpi are used for the
+    internal dithering. So if you insert photo paper, the printer will
+    print in its highest quality, no paper type choice in the
+    driver&apos;s options is needed. There is also a special high
+    resolution mode where the image is rendered in 1200 dpi, without
+    paper detection, intended for photo paper only.&lt;p&gt;
+    </en>
+  </comments>
+</printer>
