@@ -1,3 +1,8 @@
+2003-07-29  David Suffield <david.suffield@hp.com>
+
+	* printer/HP-Business_Inkjet_1100.xml: Added the HP Business
+	  1100 device.
+
 2003-07-23  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Apple-ImageWriter.xml, printer/Apple-ImageWriter_II.xml,
